# iKlippa

./: .gitattributes  .gitignore  Cargo.toml  README.md
backend/: .gitignore  README.md  go.mod  main.go  requirements.txt
backend/services/: watsonx.go
docs/: bob-usage-log.md
frontend/: .fallowignore  .fallowrc.json  .gitattributes  .gitignore  AGENTS.md  README.md  app.js  architecture.md  claude_prompt.md  engine.js  error-handling-blueprint.md  index.html  landing.html  opencode.json  package-lock.json  package.json  plan.md  repomix-output.txt  serve.json  server.js  state.js  styles.css  test_architecture.md  tsconfig.json  ui.js  vite.config.ts  vitest.config.ts  worker.js
frontend/public/: mp4-muxer.js  ui.js  worker.js
frontend/rust-engine/: Cargo.toml
frontend/rust-engine/src/: compositing.rs  lib.rs  lut.rs  timeline_state.rs
frontend/src/: main.ts
frontend/src/adapters/: browser.ts  index.ts  types.ts
frontend/src/engine/: engine.ts  errors.ts  perf.ts  tier.ts  types.ts  worker.ts
frontend/src/state/: state.ts  types.ts
frontend/src/types/: globals.d.ts  index.ts
frontend/src/ui/: captions.ts  dragDrop.ts  index.ts  keyboard.ts  lut.ts  mediaPool.ts  playback.ts  state.ts  timeline.ts  timelineUtils.ts  toolbar.ts  utils.ts
frontend/src/utils/: dom.ts  helpers.ts  object.ts  time.ts
frontend/tests/: coverage.test.ts  helpers.test.ts  object.test.ts  perf.test.ts  state.test.ts  time.test.ts  ui.test.ts  worker.test.ts
frontend/tests/adapters/: dom.test.ts  engine-audio.test.ts  engine-errors.test.ts  engine-extra.test.ts  engine.test.ts  keyboard.test.ts  timeline.test.ts  worker-extra.test.ts  worker.test.ts
frontend/tests/fakes/: fakeAudioContext.ts  fakeCanvas.ts  fakeVideoEncoder.ts  index.ts  leakRegistry.ts
frontend/tests/ui/: dragDrop-extra.test.ts  dragDrop.test.ts  mediaPool.test.ts  playback-extra.test.ts  playback.test.ts  sparkle.test.ts  timeline-extra.test.ts  timeline-utils.test.ts  timeline.test.ts  toolbar.test.ts  ui-utils.test.ts
frontend/tests/unit/: browser-adapter.test.ts  errors.test.ts  object.test.ts  perf.test.ts  state.test.ts  time.test.ts
ml/: app.py  feature_schema.json  model.json  requirements.txt  train.py
ml/scripts/: collect_yt_data.py  music_search.py  parse_script.py  stock_search.py
