[package]
name    = "iklippa-engine"
version = "0.1.0"
edition = "2021"

[lib]
# `cdylib` for the wasm-pack output; `rlib` so `cargo test` can link the unit
# tests in timeline_state.rs against this crate on the host target.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys       = "0.3"
web-sys      = { version = "0.3", features = [
  "console",
  "CanvasRenderingContext2d",
  "ImageData",
] }

# Phase 1 Task 1 — serialisable data model. serde_json works in wasm32 (pure
# parser, no filesystem). Used by timeline_state.rs for Project round-tripping
# and the .iklippa save/load format (Task 5).
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Surfaces Rust panics as readable messages in the browser devtools console.
# Enabled by default in all builds; add --no-default-features to disable in
# a size-critical production build (saves ~3 KB in the WASM binary).
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level      = 3    # Maximum optimisation — enables LLVM SIMD on wasm32
lto            = true # Link-time optimisation — merges crates for better inlining
codegen-units  = 1    # Single codegen unit so LTO can see everything
panic          = "abort" # No unwinding — smaller binary, faster panics
